--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.2",
+    "@chakra-ui/react": "^2.4.4",
+    "@clerk/nextjs": "^4.6.13",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.0.7",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "algoliasearch": "^4.14.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "framer-motion": "^6.5.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.11.2",
+    "instantsearch.css": "^7.4.5",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-instantsearch-hooks-web": "^6.38.1",
+    "swr": "^2.0.0",
+    "typescript": "4.9.4",
+    "typesense-instantsearch-adapter": "^2.4.2"
   }
 }
